--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" theme="dark">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -22,10 +22,10 @@
   <div class="dashboard-title">
     <div class="dashboard-title-name">
       <h1 >Social Media Dashboard</h1>
-      <h3>Total Followers: 23,004</h3>
+      <h4>Total Followers: 23,004</h4>
     </div>
     <div class="toggler">
-      <p id="toggle-name">Dark Mode</p>
+      <h4 id="toggle-name">Dark Mode</h4>
       <label class="switch">
         <input type="checkbox">
         <span class="slider"></span>
@@ -35,40 +35,45 @@
   </div>
   <section class="main-dashboard">
     <div class="facebook card">
-      <div class="username"><img src="./images/icon-facebook.svg" alt="icon-facebook"><a class="dark-blue">@nathanf</a>
+      <div class="username"><img src="./images/icon-facebook.svg" alt="icon-facebook"><h4>@nathanf</h4>
       </div>
       <div>
         <p class="subs-number">1987</p>
-        <p class="followers">Followers</p>
+        <h4 class="followers">Followers</h4>
       </div>
-      <div class="update-positive"><img src="./images/icon-up.svg" alt="icon-up">12 Today</div>
+      <div class="update-positive"><img src="./images/icon-up.svg" alt="icon-up">
+        <h4>12 Today</h4></div>
     </div>
     <div class="twitter card">
-      <div class="username"><img src="./images/icon-twitter.svg" alt="icon-twitter"><a class="dark-blue">@nathanf</a>
+      <div class="username"><img src="./images/icon-twitter.svg" alt="icon-twitter"><h4>@nathanf</h4>
       </div>
       <div>
         <p class="subs-number">1044</p>
-        <p class="followers">Followers</p>
+        <h4 class="followers">Followers</h4>
       </div>
-      <div class="update-positive"><img src="./images/icon-up.svg" alt="icon-up">99 Today</div>
+      <div class="update-positive"><img src="./images/icon-up.svg" alt="icon-up">
+        <h4>99 Today</h4></div>
     </div>
     <div class="instagram card">
-      <div class="username"><img src="./images/icon-instagram.svg" alt="icon-instagram"><a
-          class="dark-blue">@realnathanf</a></div>
+      <div class="username"><img src="./images/icon-instagram.svg" alt="icon-instagram">
+        <h4>@realnathanf</h4></div>
       <div>
         <p class="subs-number">11k</p>
-        <p class="followers">Followers</p>
+        <h4 class="followers">Followers</h4>
       </div>
-      <div class="update-positive"><img src="./images/icon-up.svg" alt="icon-up">1099 Today</div>
+      <div class="update-positive"><img src="./images/icon-up.svg" alt="icon-up">
+        <h4>1099 Today</h4></div>
     </div>
     <div class="youtube card">
-      <div class="username"><img src="./images/icon-youtube.svg" alt="icon-youtube"><a class="dark-blue">Nathan F.</a>
+      <div class="username"><img src="./images/icon-youtube.svg" alt="icon-youtube">
+        <h4>Nathan F.</h4>
       </div>
       <div>
         <p class="subs-number">8239</p>
-        <p class="followers">Subscribers</p>
+        <h4 class="followers">Subscribers</h4>
       </div>
-      <div class="update-negative"><img src="./images/icon-down.svg" alt="icon-down">144 Today
+      <div class="update-negative"><img src="./images/icon-down.svg" alt="icon-down">
+        <h4>144 Today</h4>
       </div>
   </section>
   <section class="second-section">
@@ -76,82 +81,82 @@
     <div class="daily-preview">
       <div class="card">
         <ul class="fist-list">
-          <li class="card-text">Page Views</li>
+          <li class="card-text"><h4>Page Views</h4></li>
           <li><img src="./images/icon-facebook.svg" alt="icon-facebook"></li>
         </ul>
         <ul>
           <li class="card-number">87</li>
-          <li class="update-positive"><img src="./images/icon-up.svg" alt="icon-up"> 3%</li>
+          <li class="update-positive"><img src="./images/icon-up.svg" alt="icon-up"><h4>3%</h4></li>
         </ul>
       </div>
       <div class="card">
         <ul class="fist-list">
-          <li class="card-text">Likes</li>
+          <li class="card-text"><h4>Likes</h4></li>
           <li><img src="./images/icon-facebook.svg" alt="icon-facebook"></li>
         </ul>
         <ul>
           <li class="card-number">52</li>
-          <li class="update-negative"><img src="./images/icon-down.svg" alt="icon-down">2%</li>
+          <li class="update-negative"><img src="./images/icon-down.svg" alt="icon-down"><h4>2%</h4></li>
         </ul>
       </div>
       <div class="card">
         <ul class="fist-list">
-          <li class="card-text">Likes</li>
+          <li class="card-text"><h4>Likes</h4></li>
           <li><img src="./images/icon-instagram.svg" alt="icon-instagram"></li>
         </ul>
         <ul>
           <li class="card-number">5462</li>
-          <li class="update-positive"><img src="./images/icon-up.svg" alt="icon-up">2257%</li>
+          <li class="update-positive"><img src="./images/icon-up.svg" alt="icon-up"><h4>2257%</h4></li>
         </ul>
       </div>
       <div class="card">
         <ul class="fist-list">
-          <li class="card-text">Profile Views</li>
+          <li class="card-text"><h4>Profile Views</h4></li>
           <li><img src="./images/icon-instagram.svg" alt="icon-instagram"></li>
         </ul>
         <ul>
           <li class="card-number">52k</li>
-          <li class="update-positive"><img src="./images/icon-up.svg" alt="icon-up"> 1375%</li>
+          <li class="update-positive"><img src="./images/icon-up.svg" alt="icon-up"><h4>1375%</h4></li>
         </ul>
       </div>
       <div class="card">
         <ul class="fist-list">
-          <li class="card-text">Retweets</li>
+          <li class="card-text"><h4>Retweets</h4></li>
           <li><img src="./images/icon-twitter.svg" alt="icon-twitter"></li>
         </ul>
         <ul>
           <li class="card-number">117</li>
-      <li class=" update-positive"><img src="./images/icon-up.svg" alt="icon-up">303%</li>
+      <li class=" update-positive"><img src="./images/icon-up.svg" alt="icon-up"><h4>303%</h4></li>
         </ul>
       </div>
       <div class="card">
         <ul class="first-list">
-          <li class="card-text">Likes</li>
+          <li class="card-text"><h4>Likes</h4></li>
           <li><img src="./images/icon-twitter.svg" alt="icon-twitter"></li>
         </ul>
         <ul>
           <li class="card-number">507</li>
-          <li class="update-positive"><img src="./images/icon-up.svg" alt="icon-up">553%</li>
+          <li class="update-positive"><img src="./images/icon-up.svg" alt="icon-up"><h4>553%</h4></li>
         </ul>
       </div>
       <div class="card">
         <ul class="first-list">
-          <li class="card-text">Likes</li>
+          <li class="card-text"><h4>Likes</h4></li>
           <li><img src="./images/icon-youtube.svg" alt="icon-youtube"></li>
         </ul>
         <ul>
           <li class="card-number">107</li>
-          <li class="update-negative"><img src="./images/icon-down.svg" alt="icon-down">19%</li>
+          <li class="update-negative"><img src="./images/icon-down.svg" alt="icon-down"><h4>19%</h4></li>
         </ul>
       </div>
       <div class="card">
         <ul class="first-list">
-          <li class="card-text">Total Views</li>
+          <li class="card-text"><h4>Total Views</h4></li>
           <li><img src="./images/icon-youtube.svg" alt="icon-youtube"></li>
         </ul>
         <ul>
           <li class="card-number">1407</li>
-          <li class="update-negative"><img src="./images/icon-down.svg" alt="icon-down">12%</li>
+          <li class="update-negative"><img src="./images/icon-down.svg" alt="icon-down"><h4>12%</h4></li>
         </ul>
       </div>
     </div>
